compiling_error.txt
/home/garrett/Dokumente/shared_with_phil/typedef.cc: In function ‘int main(int, const char**)’:
/home/garrett/Dokumente/shared_with_phil/typedef.cc:5:11: error: ‘string’ does not name a type
   typedef int blaa;
           ^
/home/garrett/Dokumente/shared_with_phil/typedef.cc:6:3: error: ‘blaa’ was not declared in this scope
   blaa bla = 3;
   ^
/home/garrett/Dokumente/shared_with_phil/typedef.cc:7:16: error: ‘bla’ was not declared in this scope
   std::cout << bla << '\n';
                ^
